tests/baselines/reference/parserThrowStatement1.d.errors.txt
==== tests/cases/compiler/parserThrowStatement1.d.ts (2 errors) ====
    throw e;
    ~~~~~
!!! parserThrowStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
          ~
!!! parserThrowStatement1.d.ts(1,7): error TS2095: Cannot find name 'e'.